# multithreaded-file-compression-tool

./: .gitignore  CMakeLists.txt  EXAMPLES.md  README.md  build.bat  build.sh  compressor.cpp  compressor.h  generate_test_data.py  main.cpp  threadpool.cpp
